Including button style and icons

--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
                 <p class="descricao">Billy Bob Thornton (Na Corda Bamba, Papai Noel às Avessas) será Lorne Malvo, um homem sem raízes e manipulador, que conhece e muda para sempre a vida de um vendedor de seguros de uma pequena cidade, Lester Nygaard, interpretado por Martin Freeman (Sherlock). Colin Hanks (Dexter) será o policial Gus Grimly, pai solteiro que deve escolher entre sua segurança pessoal e seu dever como agente da lei, ao ficar cara a cara com um assassino. Allison Tolman será Molly Solverson, uma ambiciosa policial.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
                         ASSISTIR AGORA
                     </button>
                     <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
             </div>
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/874b494625.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
