--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/main.css">
+    
+    <!-- owl css -->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
     <title>NETFLIX CLONE</title>
 </head>
 <body>
@@ -39,7 +44,45 @@
         </div>
     </main>
 
+    <div class="carrossel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini1.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini2.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini3.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini4.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini5.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini6.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini7.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini8.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini9.jpg" alt="" class="src">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/imgsmini/mini10.jpg" alt="" class="src">
+            </div>
+        </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/874b494625.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
 
 </body>
 </html>
