Including responsive css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/main.css">
     
+    <!-- responsiveness -->
+    <link rel="stylesheet" href="style/responsive.css">
+
     <!-- owl css -->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
@@ -29,7 +32,7 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">FARGO (2014)</h3>
-                <p class="descricao">Billy Bob Thornton (Na Corda Bamba, Papai Noel às Avessas) será Lorne Malvo, um homem sem raízes e manipulador, que conhece e muda para sempre a vida de um vendedor de seguros de uma pequena cidade, Lester Nygaard, interpretado por Martin Freeman (Sherlock). Colin Hanks (Dexter) será o policial Gus Grimly, pai solteiro que deve escolher entre sua segurança pessoal e seu dever como agente da lei, ao ficar cara a cara com um assassino. Allison Tolman será Molly Solverson, uma ambiciosa policial.</p>
+                <p class="descricao">Billy Bob Thornton será Lorne Malvo, um homem sem raízes e manipulador, que conhece e muda para sempre a vida de um vendedor de seguros de uma pequena cidade, Lester Nygaard, interpretado por Martin Freeman.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
                         <i class="fas fa-play"></i>
